[package]
name = "lua-comment-stripper"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/FreeMasen/lua-comment-stripper"
description = "A tool for stripping comments but preserving line numbers of lua script files"
homepage = "https://github.com/FreeMasen/lua-comment-stripper"

[dependencies]
analisar = "0.4"
clap = { version = "4.5", features = ["derive"] }
diff = "0.1"
escrever = { git = "https://github.com/FreeMasen/escrever", rev = "76aec7fe291646381b8d784674afe17383d42236" }
lex_lua = "0.2"
walkdir = "2.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
opt-level = "s"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false
tap = "freemasen/homebrew-tap"
publish-jobs = ["homebrew"]
